[gd_scene load_steps=2 format=2]

[ext_resource path="res://Backend/AuthBackend.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.0
margin_top = -4.0
margin_right = -3.0
margin_bottom = -4.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="t_login" type="Button" parent="."]
margin_left = 474.0
margin_top = 46.0
margin_right = 589.0
margin_bottom = 66.0
text = "teacher login"

[node name="t_signup" type="Button" parent="."]
margin_left = 473.0
margin_top = 80.0
margin_right = 588.0
margin_bottom = 100.0
text = "teacher signup"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="s_login" type="Button" parent="."]
margin_left = 321.0
margin_top = 50.0
margin_right = 436.0
margin_bottom = 70.0
text = "student login"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="updateUser" type="Button" parent="."]
margin_left = 334.0
margin_top = 235.0
margin_right = 449.0
margin_bottom = 255.0
text = "update user"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="getUser" type="Button" parent="."]
margin_left = 517.0
margin_top = 233.0
margin_right = 632.0
margin_bottom = 253.0
text = "getUser"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="s_signup" type="Button" parent="."]
margin_left = 321.0
margin_top = 87.0
margin_right = 436.0
margin_bottom = 107.0
text = "student sign up"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="logout" type="Button" parent="."]
margin_left = 417.0
margin_top = 133.0
margin_right = 532.0
margin_bottom = 153.0
text = "log out"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="t_login" to="." method="_on_t_login_button_up"]
[connection signal="button_up" from="t_signup" to="." method="_on_t_signup_button_up"]
[connection signal="button_up" from="s_login" to="." method="_on_s_login_button_up"]
[connection signal="button_up" from="updateUser" to="." method="_on_updateUser_button_up"]
[connection signal="button_up" from="getUser" to="." method="_on_getUser_button_up"]
[connection signal="button_up" from="s_signup" to="." method="_on_s_signup_button_up"]
[connection signal="button_up" from="logout" to="." method="_on_logout_button_up"]
